--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -9,6 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./../../scss/main.css" />
     <title>Document</title>
   </head>
@@ -445,7 +452,51 @@
                 <img src="./../../assets/images/nft-1.png" alt="" />
               </div>
               <div class="nft-bottom">
-                <span>Distant Galaxy</span>
+                <span class="text">Distant Galaxy</span>
+                <div id="mdl">
+                  <img src="./../../assets/images/avatar-3.png" alt="" />
+                  <span>MoonDancer</span>
+                </div>
+                <div id="bttm">
+                  <div class="left">
+                    <span>Price</span>
+                    <span>1.63 ETH</span>
+                  </div>
+                  <div class="right">
+                    <span>Highest Bid</span>
+                    <span>0.33 wETH</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="nft">
+              <div class="nft-top">
+                <img src="./../../assets/images/nft-1.png" alt="" />
+              </div>
+              <div class="nft-bottom">
+                <span class="text">Distant Galaxy</span>
+                <div id="mdl">
+                  <img src="./../../assets/images/avatar-3.png" alt="" />
+                  <span>MoonDancer</span>
+                </div>
+                <div id="bttm">
+                  <div class="left">
+                    <span>Price</span>
+                    <span>1.63 ETH</span>
+                  </div>
+                  <div class="right">
+                    <span>Highest Bid</span>
+                    <span>0.33 wETH</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="nft">
+              <div class="nft-top">
+                <img src="./../../assets/images/nft-1.png" alt="" />
+              </div>
+              <div class="nft-bottom">
+                <span class="text">Distant Galaxy</span>
                 <div id="mdl">
                   <img src="./../../assets/images/avatar-3.png" alt="" />
                   <span>MoonDancer</span>
@@ -464,6 +515,113 @@
             </div>
           </div>
         </div>
+        <div class="highlight-wrapper">
+          <img src="./../../assets/images/NFT Highlight.png" alt="" />
+        </div>
+        <div class="how-it-work-wrapper container">
+          <div class="text-area">
+            <span>How It Works</span>
+            <span>Find Out How To Get Started</span>
+          </div>
+          <div class="works">
+            <div class="work">
+              <img src="./../../assets/svg/how-it-works1.svg" alt="" />
+              <!-- <img src="./../../assets/svg/how-it-work-into.svg" alt=""> -->
+              <span>Setup Your wallet</span>
+              <span
+                >Set up your wallet of choice. Connect it bto the Animarket by
+                clicking the wallet icon in the top right corner.</span
+              >
+            </div>
+            <div class="work">
+              <img src="./../../assets/svg/how-it-works1.svg" alt="" />
+              <!-- <img src="./../../assets/svg/how-it-work-into.svg" alt=""> -->
+              <span>Create Collection</span>
+              <span
+                >Upload your work and setup your collection. Add a description,
+                social links and floor price.</span
+              >
+            </div>
+            <div class="work">
+              <img src="./../../assets/svg/how-it-works1.svg" alt="" />
+              <!-- <img src="./../../assets/svg/how-it-work-into.svg" alt=""> -->
+              <span>Start Earning</span>
+              <span
+                >Choose between auctions and fixed-price listings. Start earning
+                by selling your NFTs or trading others.</span
+              >
+            </div>
+          </div>
+        </div>
+        <div class="subscribe-wrapper container">
+          <div class="subscribe-area">
+            <div class="left">
+              <img src="./../../assets/images/Photo.png" alt="" />
+            </div>
+            <div class="right">
+              <span>Join Our Weekly Digest</span>
+              <span
+                >Get Exclusive Promotions & Updates Straight To You Inbox</span
+              >
+              <div class="email-area">
+                <input type="text" placeholder="Enter your email here" />
+                <button>Subscribe</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <div class="top">
+            <div class="left">
+              <div class="left-top">
+                <a href="">
+                  <img src="./../../assets/svg/nft-logo.svg" alt="" />
+                  <!-- <span>NFT Marketplace</span> -->
+                  <img src="./../../assets/svg/marketplace.svg" alt="" />
+                </a>
+              </div>
+              <span> NFT marketplace UI created with Anima for Figma. </span>
+              <span> Join our community </span>
+              <div class="contacts">
+                <a href="">
+                  <img src="./../../assets/svg/discord.svg" alt="" />
+                </a>
+                <a href="">
+                  <img src="./../../assets/svg/youtube.svg" alt="" />
+                </a>
+                <a href="">
+                  <img src="./../../assets/svg/twitter.svg" alt="" />
+                </a>
+                <a href="">
+                  <img src="./../../assets/svg/instagram.svg" alt="" />
+                </a>
+              </div>
+            </div>
+            <div class="middle">
+              <span>Explore</span>
+              <span>Marketplace</span>
+              <span>Rankings</span>
+              <span>Connect a wallet</span>
+            </div>
+            <div class="right">
+              <div class="right">
+                <span>Join Our Weekly Digest</span>
+                <span
+                  >Get Exclusive Promotions & Updates Straight To You
+                  Inbox</span
+                >
+                <div class="email-area">
+                  <input type="text" placeholder="Enter your email here" />
+                  <button>Subscribe</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <span>Ⓒ NFT Market. Use this template freely.</span>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
