--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -17,6 +17,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./../../scss/main.css" />
+    <script defer src="../../common/constants.js"></script>
+    <script defer src="./home.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -30,10 +32,10 @@
             </a>
           </div>
           <div class="right">
-            <a href="">Marketplace</a>
-            <a href="">Rankings</a>
-            <a href="">Connect a wallet</a>
-            <a href=""
+            <a href="./../marketplace/marketplace.html">Marketplace</a>
+            <a href="./../creators/creators.html">Rankings</a>
+            <a href="./../wallet/wallet.html">Connect a wallet</a>
+            <a href="./../login/login .html"
               ><img src="./../../assets/svg/sign-up.svg" alt="" /> Sign Up</a
             >
             <button>
@@ -54,7 +56,7 @@
             />
             <button>
               <img src="./../../assets/svg/rocket.svg" alt="" />
-              <a href="">Get Started</a>
+              <a href="./../login/login .html">Get Started</a>
             </button>
             <div class="staticts">
               <div class="one">
@@ -118,7 +120,9 @@
                   <span>DSGN Animals</span>
                 </div>
                 <div class="bottom-b">
-                  <img src="./../../assets/images/avatar-6.png" alt="" />
+                  <a href="./../nft/nft.html">
+                    <img src="./../../assets/images/avatar-6.png" alt="" />
+                  </a>
                   <span>MrFox</span>
                 </div>
               </div>
@@ -183,7 +187,7 @@
             </div>
             <div class="right-side">
               <button>
-                <a href=""
+                <a href="./../creators/creators.html    "
                   ><img src="./../../assets/svg/rocket.svg" alt="" />View
                   rankings</a
                 >
@@ -191,114 +195,16 @@
             </div>
           </div>
           <div class="creator-cards">
-            <div class="card">
+            <!-- <div class="card">
               <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale:</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
+              <img src="../../../images/avatars/avatar-1.png" alt="" />
               <span>Keepitreal</span>
               <div class="total-sales">
                 <span>Total Sale</span>
-                <span>34.53 ETH</span>
+                <span>34.53</span>
+                <span>ETH</span>
               </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale:</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale:</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
-            <div class="card">
-              <div id="id">1</div>
-              <img src="./../../assets/images/avatar-1.png" alt="" />
-              <span>Keepitreal</span>
-              <div class="total-sales">
-                <span>Total Sale</span>
-                <span>34.53 ETH</span>
-              </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="catagories-wrapper container">
@@ -307,69 +213,37 @@
           </div>
           <div class="catagories">
             <!-- Catagories with using a hrefs -->
-            <a class="catagory" href="">
-              <img
-                src="./../../assets/images/Image Placeholder (1).png"
-                alt=""
-              />
-              <img src="./../../assets/images/PaintBrush.png" alt="" />
+            <a class="catagory" href="./marketplace.html">
+              <img src="./../../assets/images/Category Icon (1).png" alt="" />
               <span>Art</span>
             </a>
-            <a class="catagory" href="">
-              <img
-                src="./../../assets/images/Image Placeholder (1).png"
-                alt=""
-              />
-              <img src="./../../assets/images/PaintBrush.png" alt="" />
-              <span>Art</span>
+            <a class="catagory" href="./marketplace.html">
+              <img src="./../../assets/images/Category Icon (2).png" alt="" />
+              <span>Collectibles</span>
             </a>
-            <a class="catagory" href="">
-              <img
-                src="./../../assets/images/Image Placeholder (1).png"
-                alt=""
-              />
-              <img src="./../../assets/images/PaintBrush.png" alt="" />
-              <span>Art</span>
+            <a class="catagory" href="./marketplace.html">
+              <img src="./../../assets/images/Category Icon (3).png" alt="" />
+              <span>Music</span>
             </a>
-            <a class="catagory" href="">
-              <img
-                src="./../../assets/images/Image Placeholder (1).png"
-                alt=""
-              />
-              <img src="./../../assets/images/PaintBrush.png" alt="" />
-              <span>Art</span>
+            <a class="catagory" href="./marketplace.html">
+              <img src="./../../assets/images/Category Icon (4).png" alt="" />
+              <span>Photography</span>
             </a>
-            <a class="catagory" href="">
-              <img
-                src="./../../assets/images/Image Placeholder (1).png"
-                alt=""
-              />
-              <img src="./../../assets/images/PaintBrush.png" alt="" />
-              <span>Art</span>
+            <a class="catagory" href="./marketplace.html">
+              <img src="./../../assets/images/Category Icon (5).png" alt="" />
+              <span>Video</span>
             </a>
-            <a class="catagory" href="">
-              <img
-                src="./../../assets/images/Image Placeholder (1).png"
-                alt=""
-              />
-              <img src="./../../assets/images/PaintBrush.png" alt="" />
-              <span>Art</span>
+            <a class="catagory" href="./marketplace.html">
+              <img src="./../../assets/images/Category Icon (6).png" alt="" />
+              <span>Utility</span>
             </a>
-            <a class="catagory" href="">
-              <img
-                src="./../../assets/images/Image Placeholder (1).png"
-                alt=""
-              />
-              <img src="./../../assets/images/PaintBrush.png" alt="" />
-              <span>Art</span>
+            <a class="catagory" href="./marketplace.html">
+              <img src="./../../assets/images/Category Icon (7).png" alt="" />
+              <span>Sport</span>
             </a>
-            <a class="catagory" href="">
-              <img
-                src="./../../assets/images/Image Placeholder (1).png"
-                alt=""
-              />
-              <img src="./../../assets/images/PaintBrush.png" alt="" />
-              <span>Art</span>
+            <a class="catagory" href="./marketplace.html">
+              <img src="./../../assets/images/Category Icon (8).png" alt="" />
+              <span>Virtual Words</span>
             </a>
 
             <!-- Catagories with using divs -->
@@ -439,7 +313,7 @@
             </div>
             <div class="right">
               <button>
-                <a href="">
+                <a href="./../marketplace/marketplace.html">
                   <img src="./../../assets/svg/eye.svg" alt="" />
                   <span>See All</span>
                 </a>
@@ -517,6 +391,15 @@
         </div>
         <div class="highlight-wrapper">
           <img src="./../../assets/images/NFT Highlight.png" alt="" />
+          <button>
+            <img src="./../../assets/images/avatar-1.png" alt="" />Shroomie
+          </button>
+          <span>Magic Mashrooms</span>
+          <button>
+            <a href="./../nft/nft.html">
+              <img src="./../../assets/svg/eye.svg" alt="" />See NFT</a
+            >
+          </button>
         </div>
         <div class="how-it-work-wrapper container">
           <div class="text-area">
@@ -525,7 +408,7 @@
           </div>
           <div class="works">
             <div class="work">
-              <img src="./../../assets/svg/how-it-works1.svg" alt="" />
+              <img src="./../../assets/images/Icon (1).png" alt="" />
               <!-- <img src="./../../assets/svg/how-it-work-into.svg" alt=""> -->
               <span>Setup Your wallet</span>
               <span
@@ -534,7 +417,7 @@
               >
             </div>
             <div class="work">
-              <img src="./../../assets/svg/how-it-works1.svg" alt="" />
+              <img src="./../../assets/images/Icon (2).png" alt="" />
               <!-- <img src="./../../assets/svg/how-it-work-into.svg" alt=""> -->
               <span>Create Collection</span>
               <span
@@ -543,7 +426,7 @@
               >
             </div>
             <div class="work">
-              <img src="./../../assets/svg/how-it-works1.svg" alt="" />
+              <img src="./../../assets/images/Icon (3).png" alt="" />
               <!-- <img src="./../../assets/svg/how-it-work-into.svg" alt=""> -->
               <span>Start Earning</span>
               <span
